WR#268564 - Fixed search icon amd breadcrumbs background color as well as alignment of search box and navigation

--- a/ckanext/dia_theme/less/dia_custom.less
+++ b/ckanext/dia_theme/less/dia_custom.less
@@ -19,7 +19,7 @@
 @layoutTrimBorderColor: #CCCCCC;
 @layoutTagBackgroundColor: #BADAE2;
 @layoutToolbarColor: #FFFFFF;
-@layoutToolbarBackgroundColor: #529db6;
+@layoutToolbarBackgroundColor: #0C536B;
 
 @mastheadTextColor: #FFFFFF;
 @mastheadLinkColor: @mastheadTextColor;
@@ -30,7 +30,7 @@
 @masterheadLoginHoverBackgroundColor: @layoutToolbarBackgroundColor;
 @masterheadFeedbackTextColor: @layoutTextColor;
 @masterheadFeedbackBackgroundColor: #FFB100;
-@masterheadSeachIconBackgroundColor: #A50400;
+@masterheadSeachIconBackgroundColor: #004a61;
 @masterheadSearchBoxColor: #FFFFFF;
 @masterheadStripBackgroundColor: #349EB7;
 @masterheadInfoBackgroundColor: #E8E8E8;
@@ -354,6 +354,8 @@ header.account-masthead {
 
   .simple-input {
     height: 30px;
+    float: right;
+    margin-top: 15px;
   }
 
   .site-search input {
