--- a/ckanext/dia_theme/less/masthead.less
+++ b/ckanext/dia_theme/less/masthead.less
@@ -121,6 +121,7 @@
 
   .nav-collapse {
     padding-top:10px;
+    width: 100%;
   }
 
   .section {
@@ -189,7 +190,8 @@
 
 @media (min-width: 980px) {
   .masthead  .nav-collapse {
-    float:right;
+    float:left;
+    padding-top: 15px;
   }
 }
 
